force-app/main/default/objects/Harcama__c/Harcama__c.object-meta.xml
<CustomObject>
    <label>Harcama</label>
    <nameField>
        <label>Harcama Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harcamalar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>