force-app/main/default/objects/Harcama__c/fields/Asamalar__c.field-meta.xml
<CustomField>
    <fullName>Asamalar__c</fullName>
    <label>Asamalar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taslak</fullName>
            </value>
            <value>
                <fullName>Onaya gonderildi</fullName>
            </value>
            <value>
                <fullName>Kabul edildi</fullName>
            </value>
            <value>
                <fullName>Reddedildi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>