force-app/main/default/objects/Harcama__c/fields/Harcama_tarihi__c.field-meta.xml
<CustomField>
    <fullName>Harcama_tarihi__c</fullName>
    <defaultValue>TODAY()  + 10</defaultValue>
    <label>Harcama tarihi</label>
    <type>Date</type>
</CustomField>