force-app/main/default/objects/Harcama__c/fields/Maliyet__c.field-meta.xml
<CustomField>
    <fullName>Maliyet__c</fullName>
    <label>Maliyet</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>