force-app/main/default/objects/Harcama__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asamalar__c</columns>
    <columns>Harcama_tarihi__c</columns>
    <columns>Maliyet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>